added DataPage as wrapper of Page for search endpoints.